--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -96,10 +96,10 @@
             android:layout_marginTop="25dp"
             />
         <EditText
-            android:id="@+id/conf_password"
+            android:id="@+id/phone"
             android:layout_width="300dp"
             android:layout_height="52dp"
-            android:hint="Confirm Password"
+            android:hint="Phone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@id/password"
@@ -114,7 +114,7 @@
             android:layout_height="52dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/conf_password"
+            app:layout_constraintTop_toBottomOf="@id/phone"
             android:text="Sign Up"
             android:background="@drawable/btn_raduis"
             android:backgroundTint="#6035D0"
