--- a/app/src/main/res/layout/custom_list_important.xml
+++ b/app/src/main/res/layout/custom_list_important.xml
@@ -35,7 +35,7 @@
         android:text="Metting with client"
         app:layout_constraintStart_toEndOf="@id/daily_hour"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/daily_task_rating"
+        app:layout_constraintEnd_toStartOf="@id/important_task_rating"
         android:textColor="#000"
         android:textSize="18sp"
         android:textStyle="bold"
@@ -53,17 +53,17 @@
         />
 
     <ImageView
-        android:id="@+id/daily_task_rating"
+        android:id="@+id/important_task_rating"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="60dp"
+        android:layout_marginTop="10dp"
         android:textColor="#202020"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/daily_task_name"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="60dp"
-        android:layout_marginTop="10dp"
-        app:srcCompat="@drawable/ic_baseline_star_border_24" />
+        app:srcCompat="@drawable/yallow_star" />
     <TextView
         android:id="@+id/daily_task_dec"
         android:layout_width="wrap_content"
