--- a/app/src/main/res/layout/fragment_monthly.xml
+++ b/app/src/main/res/layout/fragment_monthly.xml
@@ -8,7 +8,7 @@
         <CalendarView
             android:id="@+id/calendarView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="300dp"
             android:dateTextAppearance="@style/CalenderViewDateCustomText"
             android:theme="@style/CalenderViewCustom"
             android:weekDayTextAppearance="@style/CalenderViewWeekCustomText"
@@ -19,13 +19,13 @@
             android:layout_marginTop="10dp"
             />
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/montly_rv"
             android:layout_width="0dp"
             android:layout_height="0dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/calendarView"
                 app:layout_constraintBottom_toBottomOf="parent"
-            android:background="#fff"
             android:layout_margin="10dp"
             tools:listitem="@layout/custom_list"
             />
