--- a/app/src/main/res/layout/fragment_weekly.xml
+++ b/app/src/main/res/layout/fragment_weekly.xml
@@ -5,100 +5,24 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#eee"
-    tools:context=".DailyFragment">
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/card_day_details"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:background="#fff"
-        android:layout_margin="20dp"
-        android:padding="20dp"
-        >
-        <TextView
-            android:id="@+id/greeting"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/daily_user_name"
-            app:layout_constraintTop_toTopOf="parent"
-            android:text="Good Morning"
-            android:textColor="#202020"
-            />
-        <TextView
-            android:id="@+id/daily_user_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@id/greeting"
-            app:layout_constraintTop_toTopOf="parent"
-            android:text="Jhon"
-            android:layout_marginLeft="15dp"
-            android:textStyle="bold"
-            android:textColor="#202020"
-            />
-        <TextView
-            android:id="@+id/daily_day"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/greeting"
-            android:text="Today"
-            android:textColor="#3F51B5"
-            android:textSize="20dp"
-            android:layout_marginTop="10dp"
-            android:textStyle="bold"
-            />
-        <TextView
-            android:id="@+id/daily_dateTime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/daily_day"
-            android:text="28 Feb, 2018"
-            android:textStyle="bold"
-            android:textColor="#000"
-            android:layout_marginTop="10dp"
-            android:textSize="22dp"
-            />
-        <TextView
-            android:id="@+id/daily_state"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@id/daily_day"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/greeting"
-            android:text="completed"
-            android:textColor="#4CAF50"
-            android:layout_marginTop="10dp"
-            android:textSize="20dp"
-            android:gravity="right"
-            android:layout_marginLeft="140dp"
-            />
-        <TextView
-            android:id="@+id/daily_state_num"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:layout_constraintStart_toEndOf="@id/daily_dateTime"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/daily_state"
-            android:text="4/10"
-            android:textColor="#4CAF50"
-            android:layout_marginTop="10dp"
-            android:textSize="20dp"
-            android:gravity="right"
-            android:layout_marginLeft="100dp"
-            />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    tools:context=".WeeklyFragment">
 
+    <ImageView
+        android:id="@+id/weekly_calendar"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/week" />
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/tasks_rv"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginTop="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/card_day_details"
+        app:layout_constraintTop_toBottomOf="@id/weekly_calendar"
         tools:listitem="@layout/custom_list" />
 </androidx.constraintlayout.widget.ConstraintLayout>
